<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="25dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/loc_gambar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            tools:src="@tools:sample/backgrounds/scenic"
            android:scaleType="center"/>
        <TextView
            android:id="@+id/loc_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/loc_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="15sp"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>