<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">
        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            android:transitionName="image"
            tools:src="@tools:sample/backgrounds/scenic"/>
        <View
            android:id="@+id/viewSupport"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:background="@color/backgroundLayer"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:gravity="start">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginStart="10dp"
                android:text="@string/posted_by"
                android:textSize="10sp"
                android:gravity="start|center"
                android:layout_gravity="bottom"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="start|center"
                android:layout_marginStart="10dp"
                android:text="@string/nama"
                android:transitionName="name"
                android:textSize="15sp"
                android:layout_gravity="bottom"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_item_createdAt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="right|center"
                android:layout_marginStart="10dp"
                android:text="@string/createdAt"
                android:textSize="10sp"
                android:layout_gravity="bottom"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>







<!--    <TextView-->
<!--        android:id="@+id/tv_item_name"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="220dp"-->
<!--        android:text="@string/image_description"-->
<!--        android:textSize="20sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toEndOf="@id/iv_item_photo"-->
<!--        app:layout_constraintTop_toTopOf="@id/viewSupport"-->
<!--        app:layout_constraintBottom_toBottomOf="@id/viewSupport"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>